2001-11-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02578]
	* file.c (process_anchor): support <input type="image">
	* html.c (ALST_INPUT): add ATTR_SRC, ATTR_WIDTH, ATTR_HEIGHT
	* html.c (MAXA_INPUT): +3
	
	* conv.c (checkShiftCode): fix comments for indent(1)
	* main.c (loadLink): ditto
	* fm.h: ditto
	* file.c (process_anchor); ditto
	* file.c (HTMLlineproc2body): ditto

2001-11-28  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
	
	* [w3m-dev 02576]
	* url.c (openURL): remove pu->file = p; which cause segfault
	  because p is not initialized

2001-11-28  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02571] MAXPATHLEN
	* indep.c (currentdir): #ifdef MAXPATHLEN for GNU Hurd
	* configure: ditto

2001-11-27  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02572]
	* main.c (_peekURL): initialize s when anchor not found

2001-11-27  aito@fw.ipsj.or.jp
	* Error correction on doc-jp/FAQ.html

2001-11-27  sakane@d4.bsd.nes.nec.co.jp (Yoshinobu Sakane)
	* w3m-doc update.

2001-11-26  Tsutomu Okada <okada@furuno.co.jp>
	
	* [w3m-dev 02537]
	* configure: s/$def_egd/def_use_egd/

2001-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02556]
	* indep.c (strcasestr): strcasestr("", "") should not return NULL

	* [w3m-dev 02555]
	* configure: check strcasestr
	* fm.h (_GNU_SOURCE): requires for strcasestr()
	* indep.c (strcasestr): #ifdef HAVE_STRCASESTR
	* indep.c (strcasestr): check whether s2 is NULL
	* indep.h: add #include "config.h"
	* indep.h: #ifdef HAVE_STRCASESTR
	* indep.h: strcasestr() takes const char *

2001-11-26  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02553]
	* configure: SysV's tr requires '[a-z]' '[A-Z]'

2001-11-26  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02547] "message/*" as a kind of text type
	* file.c (is_text_type): add message/*

2001-11-25  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02535] Name conflicts in configure
	* configure: s/libdir/tlibdir/ for loop variables
