@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.8 2001/11/24 02:01:26 ukai Exp $ */
+/* $Id: proto.h,v 1.9 2001/11/27 18:29:24 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -461,6 +461,7 @@ extern Buffer *load_option_panel(void);
 extern void panel_set_option(struct parsed_tagarg *);
 extern void sync_with_option(void);
 extern char *rcFile(char *base);
+extern char *etcFile(char *base);
 extern char *libFile(char *base);
 extern char *helpFile(char *base);
 extern void setLocalCookie(void);
